# hawkmoth

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  Makefile.local  Makefile.rules  README.rst  REUSE.toml  cautodoc.py  hawkmoth.py  pylock.toml  pyproject.toml  requirements-latest.txt  requirements.txt  setup.cfg  setup.py  venv
.distro/: hawkmoth.spec
.github/: config.sh  renovate.json
.github/workflows/: docs.yml  makefile.yml  release.yml
doc/: Makefile  Makefile.local  built-in-extensions.rst  cli.rst  conf.py  directives.rst  example.c  example.rst  examples.rst  extending.rst  extension.rst  index.rst  installation.rst  readthedocs.txt  syntax.rst  tips.rst  troubleshooting.rst  update-examples
doc/_templates/: versions.html
doc/developer/: contributing.rst  index.rst  testing.rst
docker/: Dockerfile.alpine-latest  Dockerfile.arch-latest  Dockerfile.debian-bookworm  Dockerfile.debian-bullseye  Dockerfile.debian-trixie  Dockerfile.fedora-37  Dockerfile.fedora-38  Dockerfile.fedora-39  Dockerfile.fedora-40  Dockerfile.fedora-41  Dockerfile.fedora-42  Dockerfile.fedora-rawhide  Dockerfile.ubuntu-latest  Dockerfile.ubuntu-rolling  Makefile  Makefile.local
docker/base/: Dockerfile
docker/latexpdf/: Dockerfile
docker/test/: Dockerfile
hawkmoth/: Makefile.local  __init__.py  __main__.py  cautodoc.py  comment.py  docstring.py  hawkmoth.py  parser.py
hawkmoth/util/: compiler.py  doccompat.py  docstr.py  strutil.py
src/: Makefile
src/hawkmoth/: Makefile  Makefile.local  __init__.py  __main__.py  commentedcursor.py  doccursor.py  docstring.py  parser.py
test/: .gitignore  Makefile  Makefile.local  README.rst  __init__.py  autoenum-cpp.rst  autoenum-cpp.yaml  autoenum.c  autoenum.rst  autoenum.yaml  autostruct-cpp.yaml  autostruct-no-members-cpp.yaml  autostruct-no-members.rst  autostruct-no-members.yaml  autostruct.c  autostruct.rst  autostruct.yaml  autovariable-fnptr-array-cpp.yaml  autovariable-fnptr-array.c  autovariable-fnptr-array.rst  autovariable-fnptr-array.yaml  clang-diagnostics-cpp.rst  clang-diagnostics-cpp.stderr  clang-diagnostics-cpp.yaml  clang-diagnostics.c  clang-diagnostics.rst  clang-diagnostics.stderr  clang-diagnostics.yaml  comment-strip-cpp.rst  comment-strip-cpp.yaml  comment-strip.rst  comment-strip.yaml  compat-cpp.rst  compat-cpp.yaml  compat-javadoc-basic-cpp.rst  compat-javadoc-basic-cpp.yaml  compat-javadoc-basic.json  compat-javadoc-basic.options  compat-javadoc-basic.stdin  compat-javadoc-basic.stdout  (+237 more)
test/c/: array-symbolic-dimensions.c  array-symbolic-dimensions.rst  array-symbolic-dimensions.yaml  autoconf-invalid.stderr  autoconf-invalid.yaml  autoconf.yaml  autoenum.rst  autoenum.yaml  autosection-comment-strip.rst  autosection-comment-strip.yaml  autosection.c  autosection.rst  autosection.yaml  autostruct-no-members.yaml  autostruct.rst  autostruct.yaml  autotext.yaml  autotype-fnptr.c  autotype-fnptr.rst  autotype-fnptr.yaml  autovariable-fnptr-array.rst  autovariable-fnptr-array.yaml  bool.c  bool.rst  bool.yaml  caching.yaml  clang-diagnostics.yaml  comment-strip.c  comment-strip.rst  comment-strip.yaml  compiler-autoconf-mismatch.stderr  compiler-autoconf-mismatch.yaml  compiler-not-found.stderr  compiler-not-found.yaml  compiler-unknown.stderr  compiler-unknown.yaml  composition.yaml  doc.c  doc.yaml  enum.c  (+38 more)
test/cpp/: array-symbolic-dimensions.rst  array-symbolic-dimensions.yaml  autoclass-no-members.yaml  autoclass.rst  autoclass.yaml  autoenum.rst  autoenum.yaml  autostruct-no-members.yaml  autostruct.rst  autostruct.yaml  autotype-fnptr.rst  autotype-fnptr.yaml  autotype.rst  autotype.yaml  autovariable-fnptr-array.rst  autovariable-fnptr-array.yaml  clang-diagnostics.yaml  class.rst  class.yaml  comment-strip.rst  comment-strip.yaml  composition.yaml  cpp-autoclass-no-members.yaml  cpp-autoclass.rst  cpp-autoclass.yaml  cpp-autoenum.yaml  cpp-autostruct-no-members.rst  cpp-autostruct-no-members.yaml  cpp-autostruct.yaml  cpp-autovariable-fnptr-array.yaml  cpp-clang-diagnostics.yaml  cpp-comment-strip.yaml  cpp-composition.yaml  cpp-doc.yaml  cpp-enum-class.yaml  cpp-enum.yaml  cpp-function-like-macro.rst  cpp-function-like-macro.yaml  cpp-function.rst  cpp-function.yaml  (+51 more)
test/examples/: autoclass.rst  autoclass.yaml  autodoc.rst  autodoc.yaml  autofunction.yaml  automacro.yaml  autosection.c  autosection.rst  autosection.yaml  autostruct.rst  autostruct.yaml  autotext.c  autotext.rst  autotext.yaml  autotype.yaml  autounion.rst  autounion.yaml  autovar.yaml  class.cpp  compat.rst  compat.yaml  enum.c  enum.rst  enum.yaml  example-autodoc.yaml  example-autounion.yaml  example-compat.c  example-enum.yaml  example-preprocessor.yaml  example-struct.c  example-struct.yaml  (+23 more)
(+14 files in other folders)
