[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkmoth"
dynamic = ["version"]
description = "Hawkmoth - Sphinx Autodoc for C"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "BSD-2-Clause"}
requires-python = "~=3.9"
authors = [
    {name = "Jani Nikula", email = "jani@nikula.org"},
]
keywords = [
    "autodoc",
    "c",
    "documentation",
    "python",
    "sphinx",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx >= 3",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "restructuredtext_lint",
    "strictyaml",
    "types-docutils",
]

[project.scripts]
hawkmoth = "hawkmoth.__main__:main"

[project.urls]
Homepage = "https://github.com/jnikula/hawkmoth"
Documentation = "https://jnikula.github.io/hawkmoth/stable/"

[tool.hatch.version]
path = "src/hawkmoth/VERSION"
pattern = "(?P<version>[a-zA-Z0-9._-]*)"

[tool.hatch.build.targets.sdist]
include = [
    "/setup.py",
    "/src",
]
exclude = [
    "**/Makefile*",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "**/Makefile*",
]

[tool.mypy]
mypy_path = "src:."
packages = [
    "hawkmoth",
    "test",
]
exclude = "(test/conf\\.py)"

[[tool.mypy.overrides]]
module = "test.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "clang.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "strictyaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
markers = [
    "full",
]
testpaths = [
    "test",
]
