[metadata]
name = hawkmoth
version = file: src/hawkmoth/VERSION
author = Jani Nikula
author_email = jani@nikula.org
description = Hawkmoth - Sphinx Autodoc for C
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-2-Clause
license_files = LICENSE
url = https://github.com/jnikula/hawkmoth
project_urls =
    Documentation = https://jnikula.github.io/hawkmoth/stable/
keywords =
    autodoc
    c
    documentation
    python
    sphinx
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
python_requires = ~=3.8
install_requires =
    sphinx >= 3
    # clang, depend on distro packaging
package_dir=
    =src
packages =
    hawkmoth
    hawkmoth.ext
    hawkmoth.ext.javadoc
    hawkmoth.ext.napoleon
    hawkmoth.ext.transformations
    hawkmoth.util

[options.extras_require]
dev =
    flake8
    pytest
    pytest-cov
    pytest-xdist
    restructuredtext_lint
    strictyaml

[options.package_data]
hawkmoth =
    VERSION

[options.entry_points]
console_scripts =
    hawkmoth = hawkmoth.__main__:main

[flake8]
extend-ignore = E302,E305
max-line-length = 100
